# TensorRT-LLM

./: .clang-tidy  .gitignore  README.md  book.rawtext  cleanup-server.sh  clear-cache.sh  dev-server.sh  dev-traffic-simulator.sh  ford.py  install.sh  run-debug.sh  run.sh  server-AMG-Model-Eval-0.py  server-AMG-Model-Eval-00.py  server-AMG-Model-Eval-000.py  server-AMG-Model-Eval-1.py  server-AMG-Model-Eval-o1.py  server-AMG-Model-Eval.py  server-old.py  server.py
cpp/include/tensorrt_llm/batch_manager/: kvCacheTransferManager.h
cpp/tensorrt_llm/: CMakeLists.txt
cpp/tensorrt_llm/batch_manager/: CMakeLists.txt  GptManager.cpp  allocateKvCache.cpp  assignReqSeqSlots.cpp  cacheFormatter.cpp  cacheFormatter.h  cacheTransceiver.cpp  cacheTransceiver.h  capacityScheduler.cpp  capacityScheduler.h  common.h  contextProgress.cpp  createNewDecoderRequests.cpp  dataTransceiver.cpp  dataTransceiver.h  dataTransceiverImpl.cpp  dataTransceiverImpl.h  debugUtils.cpp  debugUtils.h  decoderBuffers.cpp  decoderBuffers.h  encoderBuffers.cpp  encoderBuffers.h  evictionPolicy.cpp  generateRequestOptions.cpp  guidedDecoder.cpp  handleContextLogits.cpp  handleGenerationLogits.cpp  inferenceRequest.cpp  inflightBatchingUtils.h  kvCacheEventManager.cpp  kvCacheManager.cpp  kvCacheTransferManager.cpp  kvCacheUtils.cpp  llmRequest.cpp  logitsPostProcessor.cpp  lookaheadDecodingBuffers.cpp  lookaheadDecodingBuffers.h  loraBuffers.cpp  loraBuffers.h  (+33 more)
cpp/tensorrt_llm/batch_manager/utils/: debugUtils.cpp  debugUtils.h  inflightBatchingUtils.cpp  inflightBatchingUtils.h  logitsThread.cpp  logitsThread.h  staticThreadPool.cpp  staticThreadPool.h
cpp/tensorrt_llm/executor/: CMakeLists.txt  cacheCommunicator.h  contextPhaseParams.cpp  contextPhaseState.h  dataTransceiverState.h  debugConfig.cpp  decodingConfig.cpp  disaggServerUtil.cpp  dynamicBatchConfig.cpp  dynamicBatchTuner.cpp  dynamicBatchTuner.h  executor.cpp  executorConfig.cpp  executorImpl.cpp  executorImpl.h  executorKVCacheEventManager.cpp  extendedRuntimePerfKnobConfig.cpp  guidedDecodingConfig.cpp  guidedDecodingParams.cpp  intervalSet.h  jsonSerialization.cpp  kvCacheConfig.cpp  kvCacheRetentionConfig.cpp  logitsPostProcessorConfig.cpp  loraConfig.cpp  model.h  mropeConfig.cpp  orchestratorConfig.cpp  orchestratorUtils.h  outputConfig.cpp  parallelConfig.cpp  peftCacheConfig.cpp  promptTuningConfig.cpp  request.cpp  requestImpl.h  requestUtils.cpp  requestUtils.h  requestWithId.cpp  requestWithId.h  response.cpp  (+8 more)
cpp/tensorrt_llm/executor/cache_transmission/: cacheConcatenate.cu  cacheConcatenate.h
cpp/tensorrt_llm/executor/cache_transmission/mpi_utils/: connection.cpp  connection.h
cpp/tensorrt_llm/executor/cache_transmission/ucx_utils/: connection.cpp  connection.h
cpp/tests/batch_manager/: CMakeLists.txt  NamedTensorTest.cpp  cacheTransceiverTest.cpp  capacitySchedulerTest.cpp  evictionPolicyTest.cpp  gptManagerTest.cpp  guidedDecoderTest.cpp  inferenceRequestTest.cpp  kvCacheManagerTest.cpp  kvCacheUtilsTest.cpp  llmRequestTest.cpp  microBatchSchedulerTest.cpp  modelSpec.cpp  modelSpec.h  modelSpecBinding.cpp  peftCacheManagerTest.cpp  serializeDeserializeTestUtils.h  tensorTest.cpp  trtEncoderModelTest.cpp  trtGptModelRealDecoderTest.cpp  trtGptModelTest.cpp  ucxDataTransceiverTest.cpp
cpp/tests/executor/: CMakeLists.txt  decodingConfigTest.cpp  disaggExecutor.h  disaggExecutorTest.cpp  dynamicBatchTunerTest.cpp  encDecTest.cpp  executorConfigTest.cpp  executorMockTest.cpp  executorTest.cpp  executorTestSmall.cpp  executorTestSmallArbitraryOutputTensors.cpp  kvCacheConfigTest.cpp  requestTest.cpp  requestWithIdTest.cpp  responseTest.cpp  samplingConfigTest.cpp  serializeUtilsTest.cpp  tensorTest.cpp
cpp/tests/unit_tests/batch_manager/: CMakeLists.txt  NamedTensorTest.cpp  capacitySchedulerTest.cpp  inferenceRequestTest.cpp  kvCacheManagerTest.cpp  kvCacheUtilsTest.cpp  llmRequestTest.cpp  serializeDeserializeTestUtils.h
cpp/tests/unit_tests/executor/: executorTestSmall.cpp  executorTestSmallArbitraryOutputTensors.cpp  requestTest.cpp  serializeUtilsTest.cpp
docker/: Dockerfile.multi
docker/common/: install_tensorrt.sh
docs/source/performance/: perf-overview.md
examples/deepseek_v3/: README.md
examples/llama/DeleteMe/: model.cache-delete
